parser/src/lexer/snapshots/parser__lexer__lexer__tests__unicode-string-literals-3.snap
---
source: parser/src/lexer/lexer.rs
description: "a = u\"hello\""
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Assign,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: Unicode,
        value: Str(
            "u\"hello\"",
        ),
        start: 4,
        end: 12,
    },
]
